[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Projectile.gd" type="Script" id=1]
[ext_resource path="res://assets/sound-fx/hit.wav" type="AudioStream" id=2]
[ext_resource path="res://scenes/projectiles/particles/ProjectileRoundParticles.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.6186
height = 0.160101

[node name="ProjectileRound" type="Area2D" groups=[
"projectile",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
damage = 10

[node name="CollisionBox" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="DespawnTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="SoundEffectPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -8.0

[node name="ProjectileRound" parent="." instance=ExtResource( 3 )]
rotation = 1.5708
[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
